--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </h1>
                 <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
                 <div class="flex justify-center md:justify-start">
-                    <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+                    <a href="#" class="p-3 px-5 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
 
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
                     What's different about Manage?
                 </h2>
-                <p class="p max-w-sm text-center text-darkGrayishBlue md:text-left">
+                <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
                     Manage provides all the functionality your team needs, without
                     the complexity. Our software is tailor-made for modern digital product teams.
                 </p>
@@ -78,6 +78,7 @@
                             </h3>
                         </div>
                     </div>
+
                     <div>
                         <h3 class="hidden md-4 text-lg font-bold md:block">
                             Track cpmpany-wide progress
@@ -140,6 +141,41 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Tetimonials -->
+    <section id="testimonials">
+        <!-- Container to heading and testm blocks -->
+        <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+            <!-- Heading -->
+            <h2 class="text-4xl font-bold text-center">
+                What's Different About Manage?
+            </h2>
+            <!-- Testimonial Container -->
+            <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+                <!-- Testimonial 1 -->
+                <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img src="img/avatar-anisha.png" class="w-16 -mt-14" alt="">
+                    <h5 class="text-lg font-bold">Anisha Li</h5>
+                    <p class="text-sm text-darkGrayishBlue">"Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated."</p>
+                </div>
+                <!-- Testimonial 2 -->
+                <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <img src="img/avatar-richard.png" class="w-16 -mt-14" alt="">
+                    <h5 class="text-lg font-bold">Richard Watts</h5>
+                    <p class="text-sm text-darkGrayishBlue">"Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated."</p>
+                </div>
+                <!-- Testimonial 3 -->
+                <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <img src="img/avatar-ali.png" class="w-16 -mt-14" alt="">
+                    <h5 class="text-lg font-bold">Ali Bravo</h5>
+                    <p class="text-sm text-darkGrayishBlue">"Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated."</p>
+                </div>
+            </div>
+            <!-- Button -->
+            <div class="my-16"></div>
+            <a href="#" class="p-3 px-5 pt-2 text-white bg-brightRed rounded-full
+             baseline hover:bg-brightRedLight">Get Started</a>
         </div>
     </section>
 </body>
